# Atrium

./: .env.example  .gitignore  LICENSE  README.md  foundry.toml  package-lock.json  package.json  railway.json
.github/workflows/: ci.yml  whitepaper.yml
.x402books/: wallets.json
cli/: package.json  tsconfig.json
cli/src/: env.ts  index.ts
contracts/: AtriumRegistry.sol  MockUSDC.sol
docs/: ARCHITECTURE.md  QUICKSTART.md  SKILL_SPEC.md
frontend/: .env.example  DEPLOY.md  README.md  next.config.ts  package-lock.json  package.json  railway.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: connect-wallet.tsx  copy-command.tsx  deactivate-button.tsx  dot-grid.tsx  encrypted-body.tsx  faucet-button.tsx  footer.tsx  hero-loop.tsx  invoke-button.tsx  nav.tsx  search-box.tsx  skill-body-viewer.tsx  skill-card.tsx  stat-tile.tsx  x-icon.tsx  (+1 more)
indexer/: .env.example  README.md  package.json  seed-demo.mjs  tsconfig.json
key-service/: .env.example  package-lock.json  package.json  tsconfig.json
mcp-server/: package.json  tsconfig.json
plugins/hermes/: INSTALL.md  README.md  pyproject.toml
plugins/hermes/src/atrium_hermes/: __init__.py  cli.py  config.py  manifest.py  prompt.py  publisher.py  watcher.py
plugins/hermes/tests/: conftest.py  test_manifest.py  test_watcher.py
plugins/hermes/tests/fixtures/: complete.md  incomplete.md
scripts/: AtriumRegistry.t.sol  DeployAtrium.s.sol  DeployMock.s.sol  install.sh
shared/: crypto.ts  schema.ts
whitepaper/: Makefile  README.md  build.sh  metadata.yaml  refs.bib
(+77 files in other folders)
