[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atrium-hermes"
version = "0.1.0"
description = "Atrium auto-publish sidecar for Hermes Agent — watches generated skills and publishes them via the atrium CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "watchdog>=4.0",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "click>=8.1",
  "requests>=2.31",
  "rich>=13.7",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
atrium-hermes = "atrium_hermes.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
